--- a/README.mkd
+++ b/README.mkd
@@ -2,7 +2,7 @@
 [![Build Status](https://secure.travis-ci.org/cincinnatirb/cincyrb.png)](http://travis-ci.org/cincinnatirb/cincyrb)
 
 * Rails 3.1 project using the asset pipline
-* Uses Twitter's Bootstrap project for styling and page layout
+* Uses Zurb's foundation project for styling and page layout
 * Uses HAML and SASS for templating and stylesheets
 * Includes Underscore and Backbone JS
 
